done some changes

--- a/CrudOperation/CrudOperation/CrudOperation.csproj
+++ b/CrudOperation/CrudOperation/CrudOperation.csproj
@@ -48,14 +48,8 @@
   <ItemGroup>
     <Compile Include="BLL\EventBLL.cs" />
     <Compile Include="DAL\Connection\Connection.cs" />
-    <Compile Include="DAL\Interfaces\IDelete.cs" />
-    <Compile Include="DAL\Interfaces\IDisplay.cs" />
-    <Compile Include="DAL\Interfaces\IInsert.cs" />
-    <Compile Include="DAL\Interfaces\IUpdate.cs" />
-    <Compile Include="DAL\Querys\Delete.cs" />
-    <Compile Include="DAL\Querys\Display.cs" />
-    <Compile Include="DAL\Querys\Insert.cs" />
-    <Compile Include="DAL\Querys\Update.cs" />
+    <Compile Include="DAL\Querys\DateConvert.cs" />
+    <Compile Include="DAL\Querys\EventManagement.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
