--- a/CrudOperation/CrudOperation/CrudOperation.csproj
+++ b/CrudOperation/CrudOperation/CrudOperation.csproj
@@ -48,7 +48,7 @@
   <ItemGroup>
     <Compile Include="BLL\EventBLL.cs" />
     <Compile Include="DAL\Connection\Connection.cs" />
-    <Compile Include="DAL\Querys\DateConvert.cs" />
+    <Compile Include="DAL\Delegates\DateConvert.cs" />
     <Compile Include="DAL\Querys\EventManagement.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
